css/product.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html {
    font-size: 62.5%}
body {
    box-sizing: inherit;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
.products {
    display: table;
    padding: 8%;
    border-spacing: 2em;
}
.smartBin {
    display: table-cell;
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
    margin: 4em;
}
.handwash {
    display: table-cell;
    padding: 2%;
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
}
.bin_secondary_heading {
    text-transform: capitalize;
    padding-bottom: 1em;
    text-align: center;
    transition: 1s ease-in-out;
    backface-visibility: hidden;
}
.autohandwash_secondary_heading {
    text-transform: capitalize;
    padding-bottom: 1em;
    text-align: center;
    transition: 1s ease-in-out;
}
.bin_secondary_heading:hover {
    color: #00f;
}
.autohandwash_secondary_heading:hover {
    color: #00f;
}
@media only screen and (max-width:480px) {
    .products {
    margin: 0 auto;
}
.smartBin {
    display: table;
    border-spacing: 2em;
    /* width: 90vw; */
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
    margin: 0;
    margin-bottom: 2em;
}
.handwash {
    display: table;
    padding: 2%;
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
}
}@media only screen and (max-width:600px) {
    .products {
    margin: 0 auto;
}
.smartBin {
    display: table;
    border-spacing: 2em;
    /* width: 80vw; */
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
    margin: 0;
    margin-bottom: 2em;
}
.handwash {
    display: table;
    padding: 2%;
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
}
}@media only screen and (max-width:900px) {
    .products {
    margin: 0 auto;
}
.smartBin {
    display: table;
    border-spacing: 2em;
    /* width: 60vw; */
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
    margin: 0;
    margin-bottom: 2em;
}
.handwash {
    display: table;
    padding: 2%;
    padding: 2%;
    font-size: 2em;
    border: .1em solid rgba(0, 0, 0, .2);
}
}

